# codex-rag

./: .gitignore  AGENT.md  README.md  config.yaml  draft_tmp.md  pyproject.toml  rag.bat  rag.sh  setup.cfg
chunks/: chunk_manifest.json  chunks.jsonl  parents.jsonl
docs/: Design_V1.md  MinerU_API_Reference.md  mineru_api.md
index/: bm25_stub.txt
meta/: instruction_brief.md  parse_quality_report.md  project.json  style_brief.md  version_log.jsonl
meta/query_runs/: q-20251218172320145652.json  q-20251218174743434043.json  q-20251218174805705890.json  q-20251218174843810957.json  q-20251218175051046967.json  q-20251218181146428750.json  q-20251218235629833607.json  q-20251218235712562551.json  q-20251218235730475980.json  q-20251218235759054456.json  q-20251218235816477278.json
outputs/: dry_run_v001.md  dry_run_v002.md  evidence_pack_v001.md  evidence_pack_v002.md  evidence_pack_v003.md  evidence_pack_v004.md  evidence_pack_v005.md  evidence_pack_v006.md  evidence_pack_v007.md  evidence_pack_v008.md  evidence_pack_v009.md  spec_v001.md  used_sources_v002.md  used_sources_v004.md  used_sources_v005.md
outputs/audits/: draft_tmp_citations_v001.md  draft_tmp_citations_v009.md  draft_tmp_claims_v001.md  draft_tmp_claims_v006.md  test_verify_citations_v001.md  test_verify_citations_v002.md  (+1 more)
rag/: chunker.py  citation_align.py  cli.py  config.py  errors.py  judge.py  logger.py  parser.py  utils.py  vector_store.py  versioning.py
rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: smoke_test.py
执行AI输出log/: log 1.md  log 2.md
(+34 files in other folders)
